added easy and hard button in order to display three or six items

--- a/colorGame.css
+++ b/colorGame.css
@@ -19,11 +19,13 @@ h1 {
 	color: white;
 }
 
-
-
 #stripe {
 	background: white;
 	height: 30px;
 	text-align: center;
 	color: black;
+}
+
+.selected {
+	background: blue;
 }
