--- a/colorGame.css
+++ b/colorGame.css
@@ -1,5 +1,7 @@
 body {
 	background-color: #232323;
+	margin: 0;
+	font-family: "Montserrat", "Avenir";
 }
 
 .square {
@@ -16,7 +18,23 @@ body {
 }
 
 h1 {
+	text-align: center;
+	line-height: 1.1;
+	font-weight: normal;
 	color: white;
+	background: steelblue;
+	margin: 0;
+	text-transform: uppercase;
+	padding: 20px 0;
+}
+
+#colorDisplay {
+	font-size: 200%;
+}
+
+#message {
+	display: inline-block;
+	width: 20%;
 }
 
 #stripe {
@@ -29,3 +47,24 @@ h1 {
 .selected {
 	background: blue;
 }
+
+button {
+	border: none;
+	background: none;
+	text-transform: uppercase;
+	height: 100%;
+	font-weight: 700;
+	color: steelblue;
+	letter-spacing: 1px;
+	font-size: inherit;
+}
+
+button:hover {
+	color: white;
+	background: steelblue;
+}
+
+
+
+
+
