--- a/colorGame.css
+++ b/colorGame.css
@@ -10,10 +10,14 @@ body {
 	padding-bottom: 30%;
 	float: left;
 	margin: 1.66%;
+	border-radius: 15%;
+	transition: background 0.6s;
+	-webkit-transition: background 0.6s;
+	-moz-transition: background 0.6s;
 }
 
 #container {
-	margin: 0 auto;
+	margin: 20px auto;
 	max-width: 600px;
 }
 
@@ -45,7 +49,8 @@ h1 {
 }
 
 .selected {
-	background: blue;
+	color: white;
+	background: steelblue;
 }
 
 button {
@@ -57,6 +62,9 @@ button {
 	color: steelblue;
 	letter-spacing: 1px;
 	font-size: inherit;
+	transition: all 0.3s;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
 }
 
 button:hover {
